--- a/lets.ipynb
+++ b/lets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,14 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\muham\\AppData\\Local\\Temp\\ipykernel_7504\\4261615963.py:2: FutureWarning: In a future version of pandas all arguments of DataFrame.dropna will be keyword-only.\n",
+      "C:\\Users\\muham\\AppData\\Local\\Temp\\ipykernel_16412\\4261615963.py:2: FutureWarning: In a future version of pandas all arguments of DataFrame.dropna will be keyword-only.\n",
       "  data_won = data.dropna(1)\n"
      ]
     }
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,23 +46,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.9205514385333857\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1b610232b60>]"
+       "[<matplotlib.lines.Line2D at 0x2d04cc1c4f0>]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -85,54 +78,81 @@
     "X_design = X.copy()\n",
     "X_design[\"intercept\"] = 1\n",
     "\n",
+    "#Getting intercept column to the first column\n",
     "cols = X_design.columns.tolist()\n",
     "cols = cols[-1:] + cols[:-1]\n",
     "X_design = X_design[cols]\n",
     "\n",
+    "#Getting the coefficents\n",
     "tn_X = X_design.transpose().dot(X_design)\n",
     "df_inv = pd.DataFrame(np.linalg.pinv(tn_X), tn_X.columns, tn_X.index)\n",
     "coefficents  = df_inv.dot(X_design.transpose()).dot(Y)\n",
-    "X_design.dot(coefficents)\n",
-    "ee = (Y-X_design.dot(coefficents)).dot((Y-X_design.dot(coefficents)).transpose())\n",
-    "first = (Y - np.mean(Y)).transpose().dot(Y - np.mean(Y))\n",
-    "R_square = 1 - ee/first\n",
+    "\n",
+    "residuals = Y - X_design.dot(coefficents)\n",
+    "MSE_RES = (residuals.transpose() @ residuals) / (len(Y)-len(X_design.columns))\n",
+    "MSE_TOTAL = ((Y - np.mean(Y)).transpose() @ (Y - np.mean(Y)))/ (len(Y)-1)\n",
+    "Adjusted_R_square = 1 - MSE_RES/MSE_TOTAL\n",
     "plt.scatter(X_design.dot(coefficents), Y)\n",
     "plot_range = plt.xlim()\n",
-    "plt.plot([plot_range[0], plot_range[1]], [plot_range[0], plot_range[1]],color=\"red\")"
+    "plt.plot([plot_range[0], plot_range[1]], [plot_range[0], plot_range[1]],color=\"red\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\muham\\AppData\\Local\\Temp\\ipykernel_7504\\3924149652.py:4: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  standard_error = np.diagonal(res_var*np.linalg.pinv(tn_X))**(1/2)\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = len(Y)-X.shape[1]-1\n",
-    "res = Y-X_design.dot(coefficents)\n",
-    "res_var =  res.transpose().dot(res)/df\n",
-    "standard_error = np.diagonal(res_var*np.linalg.pinv(tn_X))**(1/2)\n",
-    "t_value = coefficents/standard_error\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['BsmtFinSF1', 'BsmtUnfSF', 'ScreenPorch', 'Foundation', 'LowQualFinSF', 'TotRmsAbvGrd', '1stFlrSF', 'PoolArea', 'YearRemodAdd', 'Neighborhood', 'MSSubClass', 'SaleCondition', 'BsmtFullBath', 'PavedDrive', 'BldgType', 'Street', 'FullBath', 'ExterQual', 'TotalBsmtSF', 'YearBuilt', 'OverallQual', 'HalfBath', 'LandSlope', 'HouseStyle', 'Functional', 'MiscVal', 'LotShape', 'GarageCars', 'GarageArea', 'HeatingQC', 'MoSold', 'BsmtFinSF2', 'LotArea', 'MSZoning', '3SsnPorch', 'WoodDeckSF', 'KitchenQual', 'intercept', 'RoofStyle', 'OverallCond', 'YrSold', 'Condition1', 'KitchenAbvGr', 'LotConfig', 'Exterior1st', 'ExterCond', 'GrLivArea', 'BsmtHalfBath', 'Condition2', 'Fireplaces', 'Exterior2nd', '2ndFlrSF', 'Utilities', 'RoofMatl', 'LandContour', 'CentralAir', 'EnclosedPorch', 'BedroomAbvGr', 'Heating', 'SaleType', 'OpenPorchSF']\n"
+      "Adjusted R square:  0.9068203768651204\n",
+      "Score:  0.9205514088864934\n",
+      "adjusted R square from scikit-learn:  0.9068203420943681\n"
+     ]
+    }
+   ],
+   "source": [
+    "#For comparison\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "score = LinearRegression().fit(X_design, Y).score(X_design, Y)\n",
+    "print(\"Adjusted R square: \", Adjusted_R_square)\n",
+    "print(\"adjusted R square from scikit-learn: \", 1 - (1-score)*(len(Y)-1)/(len(Y)-len(X_design.columns)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\muham\\AppData\\Local\\Temp\\ipykernel_16412\\3924149652.py:4: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  standard_error = np.diagonal(res_var*np.linalg.pinv(tn_X))**(1/2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Calculating T-Score for each random variable\n",
+    "df = len(Y)-X.shape[1]-1\n",
+    "res = Y-X_design.dot(coefficents)\n",
+    "res_var =  res.transpose().dot(res)/df\n",
+    "standard_error = np.diagonal(res_var*np.linalg.pinv(tn_X))**(1/2)\n",
+    "t_value = coefficents/standard_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Neighborhood', 'LotArea', 'BldgType', '3SsnPorch', 'intercept', 'BsmtUnfSF', 'SaleType', 'Functional', 'YearBuilt', 'LotConfig', 'RoofStyle', 'TotRmsAbvGrd', 'MiscVal', 'MoSold', 'HouseStyle', 'MSZoning', 'BsmtFinSF2', 'LandSlope', 'Utilities', 'GarageCars', 'Condition1', 'BsmtFullBath', 'ExterQual', 'PavedDrive', 'TotalBsmtSF', 'EnclosedPorch', 'LowQualFinSF', 'BsmtFinSF1', 'KitchenQual', 'HeatingQC', 'CentralAir', 'OverallQual', 'MSSubClass', 'HalfBath', 'WoodDeckSF', '1stFlrSF', 'Street', 'YrSold', 'RoofMatl', 'FullBath', 'Foundation', 'LotShape', 'Heating', 'Exterior2nd', 'YearRemodAdd', 'GrLivArea', 'BsmtHalfBath', 'BedroomAbvGr', 'OverallCond', 'ExterCond', 'GarageArea', 'Condition2', 'PoolArea', 'KitchenAbvGr', 'Fireplaces', 'Exterior1st', 'OpenPorchSF', 'SaleCondition', 'ScreenPorch', 'LandContour', '2ndFlrSF']\n"
      ]
     }
    ],
@@ -156,13 +176,6 @@
     "#list of significant variable in estimates pricing\n",
     "print(list(set(map(lambda x: x.split(\"_\")[0] if \"_\" in x else x, indexes)))) "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
